--- a/geni.html
+++ b/geni.html
@@ -24,11 +24,11 @@
       }
 
       @media only screen and (max-width: 414px) {
-        p { font-size: 5vw; }
+        a { font-size: 5vw; }
       }
 
       @media only screen and (min-width: 415px) {
-        p { font-size: 1.5vw; }
+        a { font-size: 1.5vw; }
       }
     </style>
 
@@ -38,7 +38,8 @@
 
   <body>
     <div>
-      <p style="text-align: center; padding-top: 25%;">Nah</p>
+      <div style="text-align: center; padding-top: 25%;">
+        <a href="img/geni-favicon.png">Nah</a>
     </div>
   </body>
 
