--- a/img/index.html
+++ b/img/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 
 <html>
-  <head><title>comp</title></head>
+  <head><title>LOOK AT IT!!!</title> <link rel="stylesheet" href="https://almonds-game.github.io/no_style.css"> <link rel="icon" type="image/x-icon" href="almonds-favicon.png"> </head>
   <body style="background-color: #1F2229;">
-    <img src="look_at_her.jpg", style="width: 100%; height: 100%">
+    <a href="https://almonds-game.github.io/geni"><img src="look_at_her.jpg", style="width: 100%; height: 100%"></a>
   </body>
 </html>
