--- a/geni.html
+++ b/geni.html
@@ -39,7 +39,7 @@
   <body>
     <div>
       <div style="text-align: center; padding-top: 25%;">
-        <a href="img/geni-favicon.png">Nah</a>
+        <a href="img/geni_64x57.jpeg">Nah</a>
     </div>
   </body>
 
