--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1 style="text-align: center; color:#FFFFFF">Coming soon...</h1>
   </head>
 
-  <body style="max-width: 100%; max-height: 0%; background-color:#1F2229; color:#1F2229">
+  <body class="crt" style="max-width: 100%; max-height: 0%; background-color:#1F2229; color:#1F2229">
     <div style="text-align:center">
       <a href="https://almonds-game.github.io/complete" style="text-decoration: none; line-height:32.0; color:#1F2229">for the impatient.</a>
     </div>
