--- a/potd.html
+++ b/potd.html
@@ -17,7 +17,7 @@
     <div style="text-align: center">
       <p id="txtBig">Click the link below, as it may hold the answers you're looking for...</p>
       <p id="txtMed">...or just things the guy who made this site happens to like/find interesting</p>
-      <p id="txtSmol">...or he just hates it idk</p>
+      <p id="txtSmol">...or he hates it idk</p>
     </div>
     
     <script src="linkSel.js"></script>
@@ -26,4 +26,13 @@
     </div>
     </div>
   </body>
+
+  <!--
+  <footer>
+   <a href="http://pikachize.eye-of-newt.com/pika.cgi?refer=1">
+    <img src="http://pikachize.eye-of-newt.com/button.gif" alt="Pika!">
+  </a> 
+  </footer>
+  -->
+
 </html>
