--- a/odd.html
+++ b/odd.html
@@ -20,17 +20,27 @@
           <h3>(Possibly(???)) Useful</h3>
           <p class="categoryTxt">
           <ul>
-            <li><a href="">title</a></li>
+            <li><a href="https://sadgrl.online/webmastery/">Sadgrl's Webmastery Resources</a></li>
+            <li><a href="https://www.remove.bg/">Remove Backgrounds from Images</a></li>
+            <li><a href="https://99gifshop.neocities.org/">99GIF shop</a></li>
+            <li><a href="https://gifcities.org/">GifCities</a></li>
+            <li><a href="https://privatebin.net">PrivateBin (private pastebin site)</a></li>
+            <li><a href="https://www.cbox.ws/">Free Chatbox to Embed Into your Site</a></li>
+            <li><a href="https://www.codehead.co.uk/cbfg/">Codehead's Bitmap Font Generator</a></li>
+            <li><a href="https://www.pentacom.jp/pentacom/bitfontmaker2/">Pentacom.jp's BitFontMaker2</a></li>
+            <li><a href="http://www.acasystems.com/en/button-maker/">80x15 Brilliant Button Maker</a></li>
+            <li><a href="https://philippeharewood.com/"><b>Not</b> the Access Tokens you're Looking for</a></li>
           </ul>
           </p>
         </div>
       </div>
 
+      <!--
       <br>
 
-      <div class="descContainer">
+      <div class="desccontainer">
         <div class="desc" >
-          <h3>Interesting</h3>
+          <h3>interesting</h3>
           <p class="categoryTxt">
           <ul>
             <li><a href="">title</a></li>
@@ -66,6 +76,7 @@
       </div>
 
       <br>
+      -->
 
   </body>
 
