--- a/odd.html
+++ b/odd.html
@@ -9,15 +9,15 @@
     <link rel="icon" type="image/x-icon" href="img/almonds-favicon.png">
     <link rel="stylesheet" href="odd.css">
 
-    <title></title>
-    <h2 style="color:#FFF; text-align: center;">Internet Oddities</h3>
+    <title>Internet Oddities</title>
+    <h2 class="header">Internet Oddities</h2>
   </head>
   
   <body>
 
       <div class="descContainer">
         <div class="desc" >
-          <h3>(Possibly(???)) Useful</h3>
+          <h3 class="title">(Possibly(???)) Useful</h3>
           <p class="categoryTxt">
           <ul>
             <li><a href="https://sadgrl.online/webmastery/">Sadgrl's Webmastery Resources</a></li>
