--- a/odd.html
+++ b/odd.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="description" content="Interesting and odd pages I've found on the internet!">
@@ -25,30 +25,34 @@
             <li><a href="https://99gifshop.neocities.org/">99GIF shop</a></li>
             <li><a href="https://gifcities.org/">GifCities</a></li>
             <li><a href="https://privatebin.net">PrivateBin (private pastebin site)</a></li>
+            <li><a href="https://cinni.net/kaomoji">Cinni's Kaomoji</a><li>
             <li><a href="https://www.cbox.ws/">Free Chatbox to Embed Into your Site</a></li>
             <li><a href="https://www.codehead.co.uk/cbfg/">Codehead's Bitmap Font Generator</a></li>
             <li><a href="https://www.pentacom.jp/pentacom/bitfontmaker2/">Pentacom.jp's BitFontMaker2</a></li>
             <li><a href="http://www.acasystems.com/en/button-maker/">80x15 Brilliant Button Maker</a></li>
-            <li><a href="https://philippeharewood.com/"><b>Not</b> the Access Tokens you're Looking for</a></li>
+            <li><a href="https://philippeharewood.com/"><b>Not</b> the Access Tokens you Seek</a></li>
           </ul>
           </p>
         </div>
       </div>
 
-      <!--
       <br>
 
-      <div class="desccontainer">
+      <div class="descContainer">
         <div class="desc" >
-          <h3>interesting</h3>
+          <h3 class="title">Interesting &amp;/or Explorable</h3>
           <p class="categoryTxt">
           <ul>
-            <li><a href="">title</a></li>
+            <li><a href="https://milk.com">LECHE</a></li>
+            <li><a href="https://cinni.net/">♡ cinni's dream home ♡</a></li>
+            <li><a href="https://purrli.com">An Internet Cat</a></li>
+            <li><a href="https://sadgirl.online">sadgrl</a></li>
+            <li><a href="https://sadgrl.com/chatbox">Chatbox Cat Cafe</a></li>
           </ul>
           </p>
         </div>
       </div>
-
+      <!--
       <br>
 
       <div class="descContainer">
@@ -57,19 +61,6 @@
           <p class="categoryTxt">
           <ul>
             <li><a href="">title</a></li>
-          </ul>
-          </p>
-        </div>
-      </div>
-
-      <br>
-
-      <div class="descContainer">
-        <div class="desc" >
-          <h3>Stuff to Explore</h3>
-          <p class="categoryTxt">
-          <ul>
-            <li><a href="https://almonds-game.github.io">This very site</a></li>
           </ul>
           </p>
         </div>
