--- a/words.html
+++ b/words.html
@@ -22,10 +22,11 @@
 
       
     @media only screen and (max-width: 414px) { /* mobile */
+        p { font-size: 8vw; }
       .header { font-size: 4vw; }
       .descContainer {
         margin-left:10.1%;
-        width:220%;
+        width:150%;
       }
     }
     </style>
@@ -235,7 +236,7 @@
       <div class="desc" >
         <p>
           Syncategorematic: <br> &nbsp &nbsp
-            1. Needing to be connected with other terms, words or ideas to be understood. &nbsp &nbsp (Antonym of "Categorematic") (Adjective)
+            1. Needing to be connected with other terms, words or ideas to be understood. <br> &nbsp &nbsp (Antonym of "Categorematic") (Adjective)
         </p>
       </div>
     </div>
