--- a/geni.html
+++ b/geni.html
@@ -39,8 +39,8 @@
   <body>
     <div>
       <div style="text-align: center; padding-top: 25%;">
-        <a href="img/geni_64x57.jpeg">10 November, 2023: Nah</a>
-        <a href="img/geni_64x57.jpeg">29 May, 2023: Maybe?</a>
+        <a href="img/geni_64x57.jpeg">10/11/2023: Nah</a>
+        <a href="img/geni_64x57.jpeg">5/29/2023: Maybe?</a>
     </div>
   </body>
 
